manifests/deploy-postfix.yml
apiVersion: v1
kind: Service
metadata:
  name: postfix-service
spec:
  selector:
    app: game-do-app
  ports:
    - protocol: TCP
      port: 465
      targetPort: 465
